--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -993,15 +993,50 @@ fieldset legend {
   ul#sortable {
     border: 1px solid #5489C4;
     list-style: none;
-    margin: 0 0 20px;
+    margin: 0 0;
     padding: 10px;
     min-height: 8px;
-  }
-
-  li {
-    background: #CCCCCC;
-    margin: 5px 0;
-    padding: 5px;
+    
+    li {
+      background: #CCCCCC;
+      margin: 5px 0;
+      padding: 10px;
+    }
+    
+    li.ui-state-default {
+      cursor: move
+    }
+    
+    li.deleted {
+      display: none;
+    }
+    
+    li.last {
+      padding: 0;
+      button {
+        padding: 5px 0px;
+        width: 100%;
+      }
+    }
+    
+    div.input-append-box {
+      position: relative;
+      height: 28px;
+      div.first {
+        position: absolute;
+        left: 0;
+        right: 40px;
+      }
+      div.second {
+        position: absolute;
+        right: 0;
+        width: 30px;
+        button {
+          width: 30px;
+          padding: 4px 0;
+        }
+      }
+    }
   }
   
   div.center {
