--- a/app/views/admin/subjects/_error_messages.html.erb
+++ b/app/views/admin/subjects/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if object.errors.any? %>
   <ul class="alert alert-error">
-    <% object.errors.each_with_index do |msg, i| %>
-      <li><%= msg[1] %></li>
+    <% object.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
     <% end %>
   </ul>
 <% end %>
