--- a/app/views/admin/subjects/_form.html.erb
+++ b/app/views/admin/subjects/_form.html.erb
@@ -31,8 +31,8 @@
       <div class="row-fluid">
         <div class="span7 offset2">
           <ul id="sortable">
-            <% if @subject.tasks.any? %>
-              <% @subject.tasks.each do |task| %>
+            <% if @subject.tasks.active.any? %>
+              <% @subject.tasks.active.sort_asc.each do |task| %>
                 <li class="ui-state-default<%= ' old-task' if task.id.present? %>">
                   <div class="input-append-box">
                     <div class="first">
@@ -55,13 +55,6 @@
               </button>
             </li>
           </ul>
-        </div>
-      </div>
-      
-      <div class="row-fluid">
-        <div class="input-append span7 offset2">
-          <input id="input-new-task" type="text" placeholder="Add new task">
-          <button id="add-new-task" class="btn" type="button">Add!</button>
         </div>
       </div>
     </fieldset>
