--- a/app/views/admin/shared/_assign_trainees.html.erb
+++ b/app/views/admin/shared/_assign_trainees.html.erb
@@ -11,7 +11,7 @@
         <div class="center-child">
           <div class="span3">
             <div class="assignment-list-title">Unassigned trainees</div>
-            <%= select_tag :select_trainee_ids, options_from_collection_for_select(Trainee.free, :id, :name), 
+            <%= select_tag :select_trainee_ids, options_from_collection_for_select(Trainee.free.active, :id, :name), 
               multiple: true, class: "assignment-select" %>
           </div>
           <div class="span1 center assignment-button-wrap">
